welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: type YELLOW
	setCouleurBrosse(c:YELLOW)
                           ^